bin/tests/sema/compiler/global_if_error.swg
#global fileprivate
#global #if "true" // swc-expected-error {{sema_err_invalid_type}} swc-option sema-only

#test
{
}
